--- a/assets/css/tooplate-artxibition.css
+++ b/assets/css/tooplate-artxibition.css
@@ -846,7 +846,7 @@ Amazing Venues
 .amazing-venues .left-content h4 {
   font-size: 30px;
   font-weight: 800;
-  color: #0b26ee;
+  color: #707887;
   margin-bottom: 20px;
 }
 
